--- a/7110a-website/src/Home.css
+++ b/7110a-website/src/Home.css
@@ -5,17 +5,18 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
-  }
+    max-width: 100vw;
+    overflow: hidden;
+     }
 .Index .content {
-    top: 30%;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: center;
-    max-width: 100vw;
-}
+    box-sizing: border-box;
+    }
 .Index .content h1 {
     font-family: "Aquire";
     color: #FFFFFF;
@@ -26,16 +27,16 @@
     display: block;
 }
 .Index .content .portfolio-text {
+    max-height: fit-content;
     color: #ffffff;
-    margin: 0;
+    margin-bottom: 0;
     font-size: 2.4em;
-    height: 10vh;
     width: 13ch;
     animation: typing 2.3s steps(13), blink 0.5s step-end infinite alternate;
     white-space: nowrap;
-    overflow: hidden;
     border-right: 3px solid;
     font-family: monospace;
+    height: fit-content;
     font-size: 6em;
 }
 @keyframes typing {
