--- a/7110a-website/src/Members.css
+++ b/7110a-website/src/Members.css
@@ -1,10 +1,12 @@
 .members {
   color: white;
-  padding-bottom: 25px;
+  margin-bottom: 25px;
     background-image: url(../src/Images/Members-background.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow-y: auto;
+    height: 100%;
 }
 
 .members .member{
