--- a/7110a-website/src/Members.css
+++ b/7110a-website/src/Members.css
@@ -39,19 +39,22 @@
     width: 15%;
     height: fit-content;
     order: 1;
+    max-height: 250px;
     }
   
     .members .member .photos .gif {
+      align-items: center;
+      justify-content: center;
       margin-left: 0px;
       margin-top: auto;
       height: 140px;
       width: auto;
       order: -1;
-      transform: translateY(0%);
+      transform: translateY(-45%);
     }
     
     .members .member .Favorite {
-      transform: translateY(-150%);
+      transform: translateY(-250%);
       color: rgb(255, 255, 255);
       font-size: 20px;
     }
